maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: value update is not a member of plm.universe.Direction
  while (c==0 && (getDirection() = Direction.NORTH)){
                  ^